# findamodel

./: .dockerignore  .gitignore  AGENTS.md  BUGS.md  CLAUDE.md  Dockerfile  IDEAS.md  PROMPT.md  README.md  RUNEBRACE.md  SLICING-OPTIMIZATION.md  SUPPORT-ALGORITHM-RESEARCH.md  TASKS.md  autosupports.md  entrypoint.sh  findamodel.code-workspace  findamodel.sln
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md
backend.Tests/: AppConfigServiceTests.cs  AutoSupportGenerationServiceTests.cs  AutoSupportGenerationV2ServiceTests.cs  AutoSupportGenerationV3ServiceTests.cs  AutoSupportSettingsPreviewServiceTests.cs  ConfigInheritanceResolverTests.cs  CtbExportServiceTests.cs  DirectoryConfigReaderModelMetadataTests.cs  FilenameRuleParserTests.cs  IndexerServiceTests.cs  InstanceStatsServiceTests.cs  InternalLocalLlmProviderTests.cs  LlmStartupGatingTests.cs  MeshTransferServiceTests.cs  MetadataFieldRegistryTests.cs  ModelLoaderServiceTests.cs  ModelMappingExtensionsTests.cs  ModelMetadataHelperTests.cs  ModelRepairServiceTests.cs  ModelSaverServiceTests.cs  ModelServiceMetadataTests.cs  ModelsDirectoryPathResolverTests.cs  OllamaLocalLlmProviderTests.cs  PlateExportServiceResolutionScaleTests.cs  PlateGenerationJobServiceTests.cs  PlateSliceRasterServiceTests.cs  PreviewGenerationBenchmarkTests.cs  PreviewMeshNormalHelperTests.cs  PrinterServiceTests.cs  PrintingListPrinterTests.cs  Save3mfTests.cs  (+15 more)
desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-tauri/src-tauri/capabilities/: default.json
desktop-tauri/src-tauri/src/: main.rs
(+374 files in other folders)
