[package]
name = "findamodel-desktop"
version = "0.1.0"
description = "findamodel desktop shell"
authors = ["findamodel"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.0", features = [] }
ureq = "2.10"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
